--- a/TestMySet/TestMySet.csproj
+++ b/TestMySet/TestMySet.csproj
@@ -13,7 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\MySet\MySet.csproj" />
+      <ProjectReference Include="..\IntervalSet\IntervalSet.csproj" />
     </ItemGroup>
 
 </Project>
